FAB pulled a little from bottom right of screen, started account-page.php (not done yet), got rid of sellers tab, replaced forest placeholder with might-be-permanent tire logo, created mobileFixes.txt in order to change issues on mobile viewing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,10 @@ html, body{
 	height: 100%;
 }
 
+#logoPNG{
+	height: 120px;
+}
+
 #search{
 	position: absolute;
 	top: -12px;
@@ -188,7 +192,7 @@ nav ul a{
 
 @media only screen and (max-width: 1300px){
 	.navLinks > li > a {
-		font-size: 14px;
+		font-size: 18px;
 	}
 }
 
@@ -208,6 +212,7 @@ nav ul a{
 #addProductIcon{
 	line-height: 100px;
 	font-size: 3.6rem;
+	color: #f7cc07;
 }
 
 .btn:hover{
@@ -218,3 +223,7 @@ nav ul a{
 	background-color: #3161ac;
 }
 
+.postProductHolder{
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
